# validation/user.js
@@ -2,9 +2,7 @@ const validator = require("../utils/validate");
 
 const saveUser = (req, res, next) => {
     const validationRule = {
-        username: "required|string",
-        email: "required|email",
-        password: "required|string|regex:/^(?=.*[0-9])(?=.*[!@#$%^&*])[a-zA-Z0-9!@#$%^&*]{8,40}$/",
+        name: "required|string",
     };
 
     validator(req.body, validationRule, {}, (err, status) => {
